import "google/protobuf/empty.proto";

syntax = "proto3";

package ideaQueries;

service IdeaQueries {
    rpc getAll(google.protobuf.Empty) returns (IdeaViewList);
    rpc getById(IdeaByIdQuery) returns (IdeaView);
}

message IdeaByIdQuery {
    string id = 1;
}

message IdeaViewList {
  repeated IdeaView ideas = 1;
}

message IdeaView {
  string id = 1;
  string title = 2;
  string userId = 3;
  string description = 4;
  optional string createdAt = 5;
  optional string updatedAt = 6;
}